# audio-enhancer

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
audiosr_env/: run_audiosr.py
scripts/: docker-run.sh  setup_audiosr.sh
src/audio_enhancer/: __init__.py  __main__.py  core.py  gui.py  main.py
src/audio_enhancer/pipeline/: base.py  denoise.py  harmonic.py  mastering.py  super_resolution.py
src/audio_recostructor/: __init__.py  gpu.py  gui.py  main.py
src/audio_recostructor/pipeline/: __init__.py  extraction.py
