[project]
name = "audio-enhancer"
version = "0.1.0"
description = "Advanced audio restoration pipeline with neural super-resolution and denoising"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "descript-audio-codec>=1.0.0",
    "noisereduce>=3.0.0",
    "pyloudnorm>=0.1.1",
    "soundfile>=0.12.0",
    "librosa>=0.9.2",
    "numpy>=2.0.0",
    "scipy>=1.10.0",
    "tqdm>=4.65.0",
]

# Resemble-enhance has pinned torch==2.1.1, incompatible with ROCm
# Install manually if needed: pip install resemble-enhance --no-deps
# [project.optional-dependencies]
# resemble = ["resemble-enhance>=0.0.1"]

[project.scripts]
audio-enhancer = "audio_enhancer.main:main"

[project.gui-scripts]
audio-enhancer-gui = "audio_enhancer.gui:main"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]

[tool.uv]
index-strategy = "unsafe-best-match"
constraint-dependencies = [
    "torch>=2.5.0",
    "torchaudio>=2.5.0",
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.4"

[tool.uv.sources]
torch = { index = "pytorch-rocm" }
torchaudio = { index = "pytorch-rocm" }
pytorch-triton-rocm = { index = "pytorch-rocm" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audio_enhancer"]
